--- a/Pipfile
+++ b/Pipfile
@@ -1,38 +1,33 @@
 [[source]]
-url = "https://pypi.org/simple"
+url = "https://repo.huaweicloud.com/repository/pypi/simple"
 verify_ssl = true
-name = "pypi"
 
 [packages]
-pytz = "==2020.4"
+# base 
+pytz = "~=2021.1"
 utils2devops = ">=0.1.4"
-psycopg2-binary = "~=2.8.5"
+psycopg2-binary = "~=2.8.6"
 djangorestframework = "~=3.12.2"
 django-filter = "~=2.4.0"
 six = "~=1.15.0"
-django-rest-auth = "==0.9.5"
-certifi = "~=2020.11.8"
-coreschema = "==0.0.4"
-itypes = "~=1.2.0"
-uritemplate = "~=3.0.1"
+django-rest-auth = "~=0.9.5"
 coreapi = "~=2.3.3"
-requests = ">=2.24.0"
+requests = ">=2.25.1"
+uwsgi = ">=2.0.19"
 python-dotenv = "~=0.15.0"
-django-debug-toolbar = "==3.2"
 django-slack = "~=5.16.0"
-python-telegram-bot = "~=13.1"
-Django = "~=3.1.4"
-uWSGI = ">=2.0.19"
-django-jsoneditor = {ref = "108bc86b134bc926fa584064a132b5be1640cb5c", git = "https://github.com/martn/django-jsoneditor"}
-django-keycloak = {ref = "b213c29", git = "https://github.com/rq0net/django-keycloak"}
-caesar-user = {ref = "8bbbe47", git = "https://github.com/rq0net/caesar-user"}
-django-ajax-selects = {ref = "1c4c7f8", git = "https://github.com/rq0net/django-ajax-selects"}
-celery = "~=5.0.5"
-redis = "~=3.5.3"
-django-celery-results = "~=2.0.1"
-django-better-admin-arrayfield = "~=1.4.2"
+python-telegram-bot = "~=13.3"
+Django = "~=3.1.7"
+daphne = "~=3.0.1"
+jwt = "~=1.2.0"
+djangorestframework-jwt = "~=1.11.0"
+Twisted = "~=21.2.0"
+cryptography = "~=3.3.2"
+pyasn1 = "~=0.4.8"
+autobahn = "==21.2.1"
 
 [dev-packages]
+django-debug-toolbar = "==3.2"
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
