feat: fork from pusher

--- a/chart/django-daphne/values.yaml
+++ b/chart/django-daphne/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: caesar-deployment_common
+  repository: caesar-deployment_plan
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart version.
   tag: "latest"
@@ -55,7 +55,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: common.cwcdn.com
+    - host: plan.cwcdn.com
       paths: 
         - /
   tls: []
