--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name:  {{ include "django.fullname" . }}-config
+  name:  {{ include "celery.fullname" . }}-config
   labels:
-    app.kubernetes.io/name: {{ include "django.name" . }}
-    helm.sh/chart: {{ include "django.chart" . }}
+    app.kubernetes.io/name: {{ include "celery.name" . }}
+    helm.sh/chart: {{ include "celery.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 data:
