--- a/chart/templates/rbac.yaml
+++ b/chart/templates/rbac.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "django.fullname" . }}-rbac
+  name: {{ include "celery.fullname" . }}-rbac
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "django.fullname" . }}
+  name: {{ include "celery.fullname" . }}
 rules:
   - apiGroups: ["", "batch"]
     resources: ["jobs"]
@@ -16,12 +16,12 @@ rules:
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "django.fullname" . }}
+  name: {{ include "celery.fullname" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ include "django.fullname" . }}
+    name: {{ include "celery.fullname" . }}
 roleRef:
   kind: Role
-  name: {{ include "django.fullname" . }}
+  name: {{ include "celery.fullname" . }}
   apiGroup: rbac.authorization.k8s.io
   
