--- a/chart/templates/sites-enabled-configmap.yaml
+++ b/chart/templates/sites-enabled-configmap.yaml
@@ -1,11 +1,11 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: {{ include "django.fullname" . }}-sites-enabled-configmap
+  name: {{ include "celery.fullname" . }}-sites-enabled-configmap
 data:
   ucr-app.conf: |
-    upstream django-daphne {
-      server 127.0.0.1:9000 fail_timeout=0;
+    upstream django {
+      server 127.0.0.1:3000 fail_timeout=0;
     }
 
     server {
@@ -18,31 +18,39 @@ data:
       access_log /var/log/nginx/access.log combined;
       error_log  /var/log/nginx/error.log info;
 
-      keepalive_timeout 15;
+      keepalive_timeout 5;
 
       # path for static files (only needed for serving local staticfiles)
       root /var/www/html/;
 
-      location @process_asgi {
-        proxy_pass  http://django-daphne;
-      }
-      
-      #path to proxy my WebSocket requests
-      location /ws/ {
-         proxy_pass  http://django-daphne;
-         
-         proxy_http_version 1.1;
-         proxy_set_header Upgrade $http_upgrade;
-         proxy_set_header Connection "upgrade";
-         proxy_redirect off;
-         proxy_set_header Host $host;
-         proxy_set_header X-Real-IP $remote_addr;
-         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header X-Forwarded-Host $server_name;
+      location @process_uwsgi {
+        uwsgi_pass  django;
+        
+        uwsgi_connect_timeout           600s;
+        uwsgi_read_timeout              600s;
+        uwsgi_send_timeout              600s;
+
+        uwsgi_param  QUERY_STRING       $query_string;
+        uwsgi_param  REQUEST_METHOD     $request_method;
+        uwsgi_param  CONTENT_TYPE       $content_type;
+        uwsgi_param  CONTENT_LENGTH     $content_length;
+
+        uwsgi_param  REQUEST_URI        $request_uri;
+        uwsgi_param  PATH_INFO          $document_uri;
+        uwsgi_param  DOCUMENT_ROOT      $document_root;
+        uwsgi_param  SERVER_PROTOCOL    $server_protocol;
+        uwsgi_param  REQUEST_SCHEME     $scheme;
+        uwsgi_param  HTTPS              $https if_not_empty;
+
+        uwsgi_param  REMOTE_ADDR        $remote_addr;
+        uwsgi_param  REMOTE_PORT        $remote_port;
+        uwsgi_param  SERVER_PORT        $server_port;
+        uwsgi_param  SERVER_NAME        $server_name;
+
       }
 
       location / {
-        try_files $uri $uri/ @process_asgi;
+        try_files $uri $uri/ @process_uwsgi;
       }
 
       # location / {
