--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,8 @@ verify_ssl = true
 name = "huaweicloud-pypi"
 
 [packages]
-# base 
+# base
+setuptools = "==70.1.1"
 pytz = "~=2021.1"
 utils2devops = ">=0.1.4"
 psycopg2-binary = "~=2.8.6"
