--- a/pyproject.staging.toml
+++ b/pyproject.staging.toml
@@ -19,6 +19,7 @@ django-rest-auth = "~=0.9.5"
 django-slack = "~=5.16.0"
 djangorestframework = "~=3.12.2"
 djangorestframework-jwt = "~=1.11.0"
+elasticsearch-dsl = "==8.14.0"
 jwt = "~=1.2.0"
 psycopg2-binary = "~=2.8.6"
 pyasn1 = "~=0.4.8"
