--- a/pyproject.staging.toml
+++ b/pyproject.staging.toml
@@ -13,6 +13,7 @@ cryptography = "~=3.3.2"
 daphne = "~=3.0.1"
 Django = "~=3.1.7"
 django-celery-results = "~=2.1.0"
+django-debug-toolbar = "~=3.2"
 django-elasticsearch-dsl = "==8.0"
 django-filter = "~=2.4.0"
 django-rest-auth = "~=0.9.5"
