--- a/pyproject.prod.toml
+++ b/pyproject.prod.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
+aliyun-log-python-sdk = "==0.6.58"
 autobahn = "==21.2.1"
 coreapi = "~=2.3.3"
 cryptography = "~=3.3.2"
